--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
 
 <!-- icon link added here --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+<!-- sweetalert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <style>
     .font-poppins{
     font-family: "Poppins", sans-serif;
@@ -38,15 +41,18 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
 </style>
 </head>
 <body class="font-poppins">
-    <header class="bg-[#C6BDBD]">
+    <header class= >
         <!-- nav section -->
-    <nav class="  w-11/12 
-        mx-auto justify-between 
-        flex border-b-2 py-5 
-        border-[#17171720] 
-        mt-2 
-        ">
-<div class="w-[120px]">
+    <nav class=" fixed top-0 
+                left-0 
+                w-full 
+                bg-white 
+                shadow-md z-50
+    w-full 
+    mx-auto justify-between 
+    flex border-b-2 py-5 border-[#17171720] 
+    mt-2 bg-[#C6BDBD]" id="navbar">
+<div class="w-[120px] ml-12">
     <div 
     class="flex 
            justify-center 
@@ -68,7 +74,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
 
 </div>
 
-<div class="blogs ">
+<div class="blogs mr-12">
     <div class="flex gap-4"> 
         <button 
    class="btn 
@@ -88,6 +94,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
            border-[#422AD5]
           rounded">
            <i class="fas fa-book-open"></i>
+           <a class="nav-link" href="#learn">Others</a>
            Learn 
 </button>    
 <button 
@@ -95,7 +102,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
      bg-[#C6BDBD] 
      text-[#422AD5] 
      border-[#422AD5]
-     rounded">
+     rounded" id="logoutBtn">
      <i class="fas fa-sign-out-alt"></i>
   Logout
 </button>
@@ -106,15 +113,17 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
 
 </div>
     </nav>
+
+ 
+
 <!-- banner section code added here -->
- <section class="bg-[#FFFFFF]">
+ <section class="bg-[#FFFFFF] " id="banner-sec">
     <div 
     class="flex w-11/12 
     mx-auto 
     justify-between
     lg:flex-row
-    flex-col
-    ">
+    flex-col" >
         <div class="my-20 w-6/12">
             <h2 
             class="text-[#00BCFF] 
@@ -128,7 +137,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
             <p class="font-Hind-Siliguri
             text-[#18181B] 
             text-2xl py-2 w-11/12">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
-
+<!-- form -->
       <div class="">
          <fieldset 
            class="fieldset w-xs  
@@ -137,7 +146,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
             <label 
             class="fieldset-label">
             </label>
-             <input type="email" 
+             <input type="name" id="user"
                     class="input" 
                     placeholder="Enter Your Name" />
                     
@@ -145,9 +154,9 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
             class="fieldset-label">
             </label>
             <input 
-               type="password" 
+               type="text" id="pin"
                class="input" 
-               placeholder="Password" />
+               placeholder="Enter your Password(123456)" />
                     
             <button 
             class="btn btn-neutral mt-4 w-28
@@ -170,7 +179,7 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
     </header>
    
 <!-- vocabulary section code start here -->
-<section class="">
+<section class="" id="learn">
     <div class="text-center flex justify-center items-center">
         <h2 
         class="text-[#00BCFF] 
@@ -223,11 +232,10 @@ src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
   </div> -->
 
 
-  
  <!-- By default design -->
   <div class=" flex flex-col col-span-full text-center justify-center items-center 
-  bg-[#F8F8F8] mt-10 rounded-3xl">
-    <img src="image/assets/alert-error.png" alt="" class="w-[120px] pt-16">
+  bg-[#F8F8F8] mt-10 rounded-3xl" id="details">
+    <img src="image/assets/alert-error.png" alt="" class="w-[120px] pt-16 mx-auto">
   <div>
       <p class="text-[#79716B] 
       font-normal text-sm ">এই Lesson এ এখনো কোন Vocabulary যুক্ত করা হয়নি।</p>
